<?xml version="1.0"?>
<package format="2">
  <name>agv_path_smoothing</name>
  <version>1.0.4</version>
  <description>The agv_path_smoothing package</description>

  <maintainer email="q576333@gmail.com">bozhi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
